ferritin/src/snapshots/ferritin__tests__get_enum_details_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::submodule::TestEnum\"),\nOutputMode :: Agent, & get_fixture_crate_path ())"
---
Enum fixture_crate::submodule::TestEnum — in fixture-crate (0.1.0)

An enum for testing

This is like crate::GenericEnum but without the generic

enum TestEnum {
    VariantA,
    VariantB(String),
    VariantC {
        name: String,
        value: i32,
    },
}

## Variants

- VariantA — Variant A (see also crate::GenericEnum)
- VariantB — Variant B with data
- VariantC — Variant C with struct data (name and value)

## Trait Implementations

std: Freeze, From<Self>, RefUnwindSafe, Send, Sync, Unpin, UnsafeUnpin, UnwindSafe

- impl Any where Self: 'static + ?Sized
- impl Borrow<Self> where Self: ?Sized
- impl BorrowMut<Self> where Self: ?Sized
- impl<U: From<Self>> Into<U>
- impl<U: Into<Self>> TryFrom<U> — type Error = Infallible
- impl<U: TryFrom<Self>> TryInto<U> — type Error = <U as TryFrom<Self>>::Error
