ferritin/src/snapshots/ferritin__tests__get_enum_details_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::submodule::TestEnum\"), &\nget_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/submodule/enum.TestEnum.html",
  "meta": {
    "name": "TestEnum",
    "kind": "enum",
    "visibility": "public",
    "definedAt": "fixture_crate::submodule::TestEnum",
    "crateName": "fixture-crate",
    "crateVersion": "0.1.0"
  },
  "docs": [
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "An enum for testing",
              "style": "Plain"
            }
          ]
        },
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "This is like ",
              "style": "Plain"
            },
            {
              "text": "crate::GenericEnum",
              "style": "InlineCode",
              "path": "fixture_crate::GenericEnum"
            },
            {
              "text": " but without the generic",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "enum",
    "name": "TestEnum",
    "variants": [
      {
        "name": "VariantA",
        "shape": "plain",
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Variant A (see also ",
                    "style": "Plain"
                  },
                  {
                    "text": "crate::GenericEnum",
                    "style": "InlineCode",
                    "path": "fixture_crate::GenericEnum"
                  },
                  {
                    "text": ")",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "VariantB",
        "shape": "tuple",
        "tupleFields": [
          [
            {
              "text": "String",
              "style": "TypeName",
              "path": "alloc::string::String"
            }
          ]
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Variant B with data",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      },
      {
        "name": "VariantC",
        "shape": "struct",
        "fields": [
          {
            "name": "name",
            "type": [
              {
                "text": "String",
                "style": "TypeName",
                "path": "alloc::string::String"
              }
            ]
          },
          {
            "name": "value",
            "type": [
              {
                "text": "i32",
                "style": "TypeName"
              }
            ]
          }
        ],
        "docs": [
          {
            "type": "truncatedBlock",
            "nodes": [
              {
                "type": "paragraph",
                "spans": [
                  {
                    "text": "Variant C with struct data (",
                    "style": "Plain"
                  },
                  {
                    "text": "name",
                    "style": "InlineCode"
                  },
                  {
                    "text": " and ",
                    "style": "Plain"
                  },
                  {
                    "text": "value",
                    "style": "InlineCode"
                  },
                  {
                    "text": ")",
                    "style": "Plain"
                  }
                ]
              }
            ],
            "level": "SingleLine"
          }
        ]
      }
    ],
    "traitImpls": [
      {
        "traitName": "Any",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/any/trait.Any.html",
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "Borrow",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/borrow/trait.Borrow.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "T",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "BorrowMut",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/borrow/trait.BorrowMut.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "T",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "Freeze",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.Freeze.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "From",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/convert/trait.From.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "T",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "Into",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/convert/trait.Into.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "U",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "RefUnwindSafe",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/panic/unwind_safe/trait.RefUnwindSafe.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "Send",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.Send.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "Sync",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.Sync.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "TryFrom",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/convert/trait.TryFrom.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "U",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "assocTypes": [
          {
            "name": "Error",
            "type": [
              {
                "text": "Infallible",
                "style": "TypeName",
                "path": "core::convert::Infallible"
              }
            ]
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "TryInto",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/convert/trait.TryInto.html",
        "args": [
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "U",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ],
        "assocTypes": [
          {
            "name": "Error",
            "type": [
              {
                "text": "<",
                "style": "Punctuation"
              },
              {
                "text": "U",
                "style": "Generic"
              },
              {
                "text": " ",
                "style": "Plain"
              },
              {
                "text": "as",
                "style": "Keyword"
              },
              {
                "text": " ",
                "style": "Plain"
              },
              {
                "text": "TryFrom",
                "style": "TypeName",
                "path": "core::convert::TryFrom"
              },
              {
                "text": "<",
                "style": "Punctuation"
              },
              {
                "text": "T",
                "style": "Generic"
              },
              {
                "text": ">",
                "style": "Punctuation"
              },
              {
                "text": ">",
                "style": "Punctuation"
              },
              {
                "text": "::",
                "style": "Punctuation"
              },
              {
                "text": "Error",
                "style": "Plain"
              }
            ]
          }
        ],
        "isStd": true,
        "blanket": [
          {
            "text": "T",
            "style": "Generic"
          }
        ]
      },
      {
        "traitName": "Unpin",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.Unpin.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "UnsafeUnpin",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/marker/trait.UnsafeUnpin.html",
        "isSynthetic": true,
        "isStd": true
      },
      {
        "traitName": "UnwindSafe",
        "traitUrl": "https://doc.rust-lang.org/nightly/core/panic/unwind_safe/trait.UnwindSafe.html",
        "isSynthetic": true,
        "isStd": true
      }
    ]
  }
}
